Some documentation addition, unit file

--- a/dyngo.conf
+++ b/dyngo.conf
@@ -7,12 +7,12 @@
 interval=60
 database=/var/lib/dingo/dingo.db
 [public ipv6]
-hostname=antares.wagner.pp.ru
+hostname=antares.home.wagner.pp.ru
 network=::/0	
 server=http://www.wagner.pp.ru/cgi-bin/dyndns.cgi
 user=
 [postgrespro local]
 hostname=antares.local.vm 
 network=192.168.24.0/21
-server=http://fafnir.l.posgrespro.ru/dyndns
+server=http://fafnir.l.posgrespro.ru/cgi-bin?dyndns
 
