Make example configuration file really an example

--- a/dyngo.conf
+++ b/dyngo.conf
@@ -4,15 +4,47 @@
 # network - IP network where this name belonks to
 # server - url of dyndns server
 [dingo]
+# In seconds
 interval=60
 database=/var/lib/dingo/dingo.db
-[public ipv6]
-hostname=antares.wagner.pp.ru
-network=::/0	
-server=http://www.wagner.pp.ru/cgi-bin/dyndns.cgi
-user=
-[postgrespro local]
-hostname=antares.local.vm 
-network=192.168.24.0/21
-server=http://fafnir.l.posgrespro.ru/dyndns
-
+loglevel=INFO
+# Trusted certicicate store can be
+# either file with lots of certificates or directory. 
+# In later case it should be hashed
+# by ca_hash utility from openssl
+ca=/etc/ssl/certs
+#
+# I'm not really sure that dyndns.org supports IPv6 and AAAA records.
+# but my own dyndns server does and that's enough for me
+#
+#[public ipv6]
+#hostname=roaming-laptop.examlple.conf
+#network=::/0	
+#server=https://member.dyndns.org/v3/update
+#user=dyndnsuser
+#password=verySecretPas
+#
+#[public ipv4]
+#hostname=roaming-laptop.examlple.conf
+#network=0.0.0.0/0	
+#server=https://member.dyndns.org/v3/update
+#user=dyndnsuser
+#password=verySecretPas
+#
+# Note that following two examples use same dyndns server
+# and same hostname. If it is your case, it's up to you to make sure
+# that your laptop wouldn't try to connect to corporate VPN from inside
+# office network
+#
+#[corporate vpn]
+#hostname=roaming-laptop.employees.local 
+#network=192.168.24.0/24
+#server=http://server.local/dyndns
+#user=j.doe
+#password=SomeMoreSecretPassword
+#[corporate wifi]
+#hostname=roaming-laptop.employees.local 
+#network=192.168.25.0/24
+#server=http://server.local/dyndns
+#user=j.doe
+#password=SomeMoreSecretPassword
