Fixed some typos in the example configuration file

--- a/dyngo.conf
+++ b/dyngo.conf
@@ -1,32 +1,35 @@
-# Config file for dingo dyndns client
-# Section name can be anything - it is for your convinience
-# parameters - hostname - name to send to server
-# network - IP network where this name belonks to
-# server - url of dyndns server
-[dingo]
+# Config file for dyngo dyndns client
+# Global parameters
+[dyngo]
 # In seconds
 interval=60
-database=/var/lib/dingo/dingo.db
+database=/var/lib/dyngo/dyngo.db
 loglevel=INFO
 # Trusted certicicate store can be
 # either file with lots of certificates or directory. 
 # In later case it should be hashed
 # by ca_hash utility from openssl
 ca=/etc/ssl/certs
+
+# Section below define different networks this machine can participate
+# Section name can be anything - it is for your convinience
+# parameters - hostname - name to send to server
+# network - IP network where this name belonks to
+# server - url of dyndns server
+#[public ipv4]
+#hostname=roaming-laptop.example.conf
+#network=0.0.0.0/0	
+#server=https://member.dyndns.org/v3/org
+#user=dyndnsuser
+#password=verySecretPas
+#
 #
 # I'm not really sure that dyndns.org supports IPv6 and AAAA records.
 # but my own dyndns server does and that's enough for me
 #
 #[public ipv6]
-#hostname=roaming-laptop.examlple.conf
+#hostname=roaming-laptop.example.org
 #network=::/0	
-#server=https://member.dyndns.org/v3/update
-#user=dyndnsuser
-#password=verySecretPas
-#
-#[public ipv4]
-#hostname=roaming-laptop.examlple.conf
-#network=0.0.0.0/0	
 #server=https://member.dyndns.org/v3/update
 #user=dyndnsuser
 #password=verySecretPas
